user manager update

--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="secon_bar">#282828</color>
     <color name="btn1">#1976D2</color>
     <color name="lb">#10304E</color>
+    <color name="white">#FFFFFF</color>
 
     <color name="transperant">#00000000</color>
 
