--- a/android/app/src/main/res/layout/activity_rf_user_credentials.xml
+++ b/android/app/src/main/res/layout/activity_rf_user_credentials.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Rf.RF_user_credentials">
+    tools:context="com.Rf.RF_user_credentials">
 
     <LinearLayout
         android:id="@+id/loading"
