--- a/android/app/src/main/res/menu/add_menu.xml
+++ b/android/app/src/main/res/menu/add_menu.xml
@@ -7,25 +7,25 @@
         android:id="@+id/add_btn_photo_gallery"
         android:enabled="true"
         android:icon="@drawable/ic_baseline_add_photo_alternate_24"
-        android:title="Add Photo ( Gallery )"
+        android:title="@string/add_photo_gallery"
         android:visible="true" />
     <item
         android:id="@+id/add_btn_photo_camera"
         android:enabled="true"
         android:icon="@drawable/ic_baseline_add_a_photo_24"
-        android:title="Add Photo ( Camera )"
+        android:title="@string/add_photo_camera"
         android:visible="true" />
     <item
         android:id="@+id/add_btn_text"
         android:enabled="true"
         android:icon="@drawable/ic_baseline_text_fields_24"
-        android:title="Add Text"
+        android:title="@string/add_text"
         android:visible="true" />
     <item
         android:id="@+id/add_btn_page"
         android:enabled="true"
         android:icon="@drawable/ic_baseline_note_add_24"
-        android:title="New Page"
+        android:title="@string/new_page"
         android:visible="true" />
 
 </menu>
