--- a/android/app/src/main/res/layout/activity_rf.xml
+++ b/android/app/src/main/res/layout/activity_rf.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -63,7 +63,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="50dp"
                     android:contentDescription="TODO"
-                    android:tint="@color/red"  />
+                    app:tint="@color/red" />
 
                 <LinearLayout
                     android:layout_width="319dp"
@@ -75,7 +75,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:paddingLeft="50dp"
+                        android:paddingStart="50dp"
                         android:text="MO"
                         android:textColor="#E91E63"
                         android:textSize="18sp" />
@@ -124,4 +124,4 @@
 
     </LinearLayout>
 
-</FrameLayout>
+</merge>
