--- a/android/app/src/main/res/layout/content_main_editor.xml
+++ b/android/app/src/main/res/layout/content_main_editor.xml
@@ -9,7 +9,7 @@
     tools:context="com.pdfEditor.MainEditorActivity"
     tools:showIn="@layout/activity_main_editor">
 
-    <FrameLayout xmlns:tools="http://schemas.android.com/tools"
+    <FrameLayout
         android:id="@+id/editorPerant"
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -18,30 +18,9 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout8">
+        app:layout_constraintTop_toTopOf="parent">
 
 
     </FrameLayout>
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/linearLayout8"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:background="#009688"
-        android:visibility="gone"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <Button
-            android:id="@+id/bt_submit"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:background="#009688"
-            android:text="Submit"
-            android:textColor="#FFFFFF"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
