--- a/android/app/src/main/res/layout/dialog_media_select.xml
+++ b/android/app/src/main/res/layout/dialog_media_select.xml
@@ -16,7 +16,7 @@
             android:id="@+id/gal"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:layout_marginRight="20dp"
+            android:layout_marginEnd="20dp"
             android:adjustViewBounds="true"
             android:background="@android:color/transparent"
             android:contentDescription="TODO"
@@ -30,7 +30,7 @@
             android:id="@+id/cam"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:layout_marginLeft="20dp"
+            android:layout_marginStart="20dp"
             android:adjustViewBounds="true"
             android:background="@android:color/transparent"
             android:contentDescription="TODO"
