--- a/android/app/src/main/res/layout/p_image_view.xml
+++ b/android/app/src/main/res/layout/p_image_view.xml
@@ -18,6 +18,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="SpeakableTextPresentCheck"
             tools:visibility="visible">
 
             <LinearLayout
@@ -55,7 +56,8 @@
                 android:layout_height="match_parent"
                 android:layout_gravity="right"
                 android:gravity="right|center_vertical"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:baselineAligned="false">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
@@ -72,12 +74,14 @@
                         app:layout_constraintStart_toEndOf="@+id/b_rotate_right"
                         app:layout_constraintTop_toTopOf="parent"
                         app:srcCompat="@android:drawable/ic_menu_add"
-                        app:tint="#373737" />
+                        app:tint="#373737"
+                        tools:ignore="SpeakableTextPresentCheck"
+                        android:contentDescription="TODO" />
 
                     <ImageButton
                         android:id="@+id/done"
                         android:layout_width="wrap_content"
-                        android:layout_height="30dp"
+                        android:layout_height="48dp"
                         android:layout_marginTop="10dp"
                         android:layout_marginEnd="8dp"
                         android:layout_marginBottom="10dp"
@@ -90,12 +94,14 @@
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
-                        app:tint="#4CAF50" />
+                        app:tint="#4CAF50"
+                        tools:ignore="SpeakableTextPresentCheck"
+                        android:contentDescription="TODO" />
 
                     <ImageButton
                         android:id="@+id/b_cancel"
                         android:layout_width="60dp"
-                        android:layout_height="30dp"
+                        android:layout_height="48dp"
                         android:layout_marginTop="10dp"
                         android:layout_marginEnd="8dp"
                         android:layout_marginBottom="10dp"
@@ -108,7 +114,9 @@
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toStartOf="@+id/done"
                         app:layout_constraintTop_toTopOf="parent"
-                        app:tint="#E91E63" />
+                        app:tint="#E91E63"
+                        tools:ignore="SpeakableTextPresentCheck"
+                        android:contentDescription="TODO" />
 
                     <ImageButton
                         android:id="@+id/b_rotate_right"
@@ -119,11 +127,14 @@
                         android:layout_marginBottom="4dp"
                         android:layout_weight="1"
                         android:backgroundTint="#00FFFFFF"
+                        android:minHeight="48dp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toEndOf="@+id/b_rotate_left"
                         app:layout_constraintTop_toTopOf="parent"
                         app:srcCompat="@drawable/ic_baseline_rotate_right_24"
-                        app:tint="#373737" />
+                        app:tint="#373737"
+                        tools:ignore="SpeakableTextPresentCheck"
+                        android:contentDescription="TODO" />
 
                     <ImageButton
                         android:id="@+id/b_rotate_left"
@@ -134,11 +145,14 @@
                         android:layout_marginBottom="4dp"
                         android:layout_weight="1"
                         android:backgroundTint="#00FFFFFF"
+                        android:minHeight="48dp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
                         app:srcCompat="@drawable/ic_baseline_rotate_left_24"
-                        app:tint="#373737" />
+                        app:tint="#373737"
+                        tools:ignore="SpeakableTextPresentCheck"
+                        android:contentDescription="TODO" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
             </LinearLayout>
