--- a/android/app/src/main/res/layout/p_shape_view.xml
+++ b/android/app/src/main/res/layout/p_shape_view.xml
@@ -23,7 +23,7 @@
                 android:id="@+id/edit_menu_shapes"
                 android:layout_width="60dp"
                 android:layout_height="30dp"
-                android:layout_marginLeft="5dp"
+                android:layout_marginStart="5dp"
                 android:layout_weight="1"
                 android:background="@color/btn1"
                 android:text="Shape"
@@ -35,7 +35,7 @@
                 android:id="@+id/done"
                 android:layout_width="wrap_content"
                 android:layout_height="30dp"
-                android:layout_marginLeft="5dp"
+                android:layout_marginStart="5dp"
                 android:layout_weight="1"
                 android:background="@color/btn1"
                 android:text="Done"
@@ -58,7 +58,7 @@
                 android:id="@+id/color"
                 android:layout_width="58dp"
                 android:layout_height="30dp"
-                android:layout_marginRight="3dp"
+                android:layout_marginEnd="3dp"
                 android:layout_weight="1"
                 android:background="@color/btn1"
                 android:contentDescription="TODO"
@@ -81,7 +81,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="5dp"
+                android:layout_marginStart="5dp"
                 android:layout_weight="1"
                 android:text="Size"
                 android:textColor="@android:color/background_light" />
