--- a/android/app/src/main/res/layout/p_text_editor.xml
+++ b/android/app/src/main/res/layout/p_text_editor.xml
@@ -50,8 +50,8 @@
 
                 <ImageButton
                     android:id="@+id/b_cancel"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
                     android:layout_marginTop="10dp"
                     android:layout_marginEnd="8dp"
                     android:layout_marginBottom="10dp"
@@ -64,12 +64,14 @@
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toStartOf="@+id/done"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:tint="#E91E63" />
+                    app:tint="#E91E63"
+                    tools:ignore="SpeakableTextPresentCheck"
+                    android:contentDescription="TODO" />
 
                 <ImageButton
                     android:id="@+id/done"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
                     android:layout_marginTop="10dp"
                     android:layout_marginEnd="8dp"
                     android:layout_marginBottom="10dp"
@@ -82,7 +84,9 @@
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:tint="#4CAF50" />
+                    app:tint="#4CAF50"
+                    tools:ignore="SpeakableTextPresentCheck"
+                    android:contentDescription="TODO" />
 
                 <SeekBar
                     android:id="@+id/size"
@@ -99,8 +103,8 @@
 
                 <Button
                     android:id="@+id/b_italic"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
                     android:layout_marginStart="8dp"
                     android:background="@drawable/ic_baseline_format_italic_24"
                     android:backgroundTint="@color/gray"
@@ -108,12 +112,13 @@
                     android:textStyle="italic"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/b_bold"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:ignore="SpeakableTextPresentCheck" />
 
                 <Button
                     android:id="@+id/b_bold"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
                     android:layout_marginStart="8dp"
                     android:background="@drawable/ic_baseline_format_bold_24"
                     android:backgroundTint="@color/gray"
@@ -121,7 +126,8 @@
                     android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/divider"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:ignore="SpeakableTextPresentCheck" />
 
                 <View
                     android:id="@+id/divider"
