--- a/android/app/src/main/res/xml/file_paths.xml
+++ b/android/app/src/main/res/xml/file_paths.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<paths xmlns:android="http://schemas.android.com/apk/res/android">
+<paths>
 
     <external-path
         name="external_files"
@@ -20,5 +20,11 @@
     <external-files-path
         name="extfiles"
         path="." />
-    <external-path name="external" path="." />
+    <external-path
+        name="external"
+        path="." />
+
+    <files-path
+        name="internal_apk_storage"
+        path="ota_update/" />
 </paths>
