--- a/android/app/src/main/res/layout/p_drowing_view.xml
+++ b/android/app/src/main/res/layout/p_drowing_view.xml
@@ -13,7 +13,7 @@
             android:id="@+id/linearLayout5"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:layout_gravity="right"
+            android:layout_gravity="end"
             android:background="#E1E1E1"
             android:orientation="vertical"
             android:visibility="visible"
@@ -29,8 +29,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_gravity="center|right|center_horizontal|center_vertical"
-                android:gravity="right|center_vertical"
+                android:layout_gravity="center|end|center_horizontal|center_vertical"
+                android:gravity="end|center_vertical"
                 android:orientation="horizontal">
 
                 <LinearLayout
@@ -49,10 +49,10 @@
                         android:layout_weight="1"
                         android:background="@drawable/transparent"
 
-                        android:contentDescription="TODO"
+                        android:contentDescription="@string/todo"
                         android:scaleType="fitCenter"
                         android:src="@drawable/colors"
-                        android:text="Color"
+                        android:text="@string/color"
                         android:textAllCaps="false"
                         android:textSize="11sp" />
 
@@ -65,8 +65,8 @@
                         android:background="@drawable/color_ball"
                         android:backgroundTint="#E91E63"
 
-                        android:src="@drawable/ring"
-                        android:contentDescription="TODO" />
+                        android:contentDescription="@string/todo"
+                        android:src="@drawable/ring" />
 
                     <ImageButton
                         android:id="@+id/b_color_blue"
@@ -75,7 +75,7 @@
                         android:layout_marginEnd="15dp"
                         android:background="@drawable/color_ball"
                         android:backgroundTint="#03A9F4"
-                        android:contentDescription="TODO" />
+                        android:contentDescription="@string/todo" />
 
                     <ImageButton
                         android:id="@+id/b_color_orange"
@@ -84,7 +84,7 @@
                         android:layout_marginEnd="15dp"
                         android:background="@drawable/color_ball"
                         android:backgroundTint="#FF5722"
-                        android:contentDescription="TODO" />
+                        android:contentDescription="@string/todo" />
 
                     <ImageButton
                         android:id="@+id/b_color_green"
@@ -93,7 +93,7 @@
                         android:layout_marginEnd="15dp"
                         android:background="@drawable/color_ball"
                         android:backgroundTint="#4CAF50"
-                        android:contentDescription="TODO" />
+                        android:contentDescription="@string/todo" />
 
                     <ImageButton
                         android:id="@+id/b_color_yellow"
@@ -102,7 +102,7 @@
                         android:layout_marginEnd="15dp"
                         android:background="@drawable/color_ball"
                         android:backgroundTint="#FFC107"
-                        android:contentDescription="TODO" />
+                        android:contentDescription="@string/todo" />
                 </LinearLayout>
 
                 <View
@@ -127,7 +127,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="00"
+                    android:text="@string/_00"
                     android:textColor="@android:color/background_dark" />
 
             </LinearLayout>
