--- a/android/app/src/main/res/layout/p_hightlight_view.xml
+++ b/android/app/src/main/res/layout/p_hightlight_view.xml
@@ -54,7 +54,7 @@
                         android:text="Color"
                         android:textAllCaps="false"
                         android:textSize="11sp"
-                        android:contentDescription="TODO" />
+                        android:contentDescription="@string/todo" />
 
 
                     <ImageButton
