--- a/android/app/src/main/res/layout/dialog_media_select.xml
+++ b/android/app/src/main/res/layout/dialog_media_select.xml
@@ -19,7 +19,7 @@
             android:layout_marginEnd="20dp"
             android:adjustViewBounds="true"
             android:background="@android:color/transparent"
-            android:contentDescription="TODO"
+            android:contentDescription="@string/todo"
             android:scaleType="fitCenter"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/cam"
