--- a/android/app/src/main/res/drawable/z.xml
+++ b/android/app/src/main/res/drawable/z.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layer-list xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <!--    <corners android:radius="5dp" />-->
     <item
         android:bottom="0dp"
@@ -18,8 +17,7 @@
     <item
         android:height="20dp"
         android:left="0dp"
-        android:top="0dp"
-        tools:targetApi="m">
+        android:top="0dp">
         <!--        <corners-->
         <!--            android:bottomLeftRadius="7dp"-->
         <!--            android:bottomRightRadius="7dp"-->
