--- a/android/app/src/main/res/layout/activity_rf.xml
+++ b/android/app/src/main/res/layout/activity_rf.xml
@@ -53,7 +53,7 @@
                     android:layout_width="57dp"
                     android:layout_height="50dp"
                     android:adjustViewBounds="true"
-                    android:contentDescription="TODO"
+                    android:contentDescription="@string/todo"
                     android:scaleType="fitCenter"
                     android:visibility="gone"
                     app:srcCompat="@drawable/file_type_2" />
@@ -62,7 +62,8 @@
                     android:id="@+id/selectBtn"
                     android:layout_width="wrap_content"
                     android:layout_height="50dp"
-                    android:contentDescription="TODO"
+                    android:contentDescription="@string/todo"
+                    android:minWidth="32dp"
                     app:tint="@color/red" />
 
                 <LinearLayout
@@ -76,7 +77,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:paddingStart="50dp"
-                        android:text="MO"
+                        android:text="@string/mo"
                         android:textColor="#E91E63"
                         android:textSize="18sp" />
 
@@ -92,7 +93,7 @@
                 <LinearLayout
                     android:layout_width="154dp"
                     android:layout_height="match_parent"
-                    android:gravity="right"
+                    android:gravity="end"
                     android:orientation="vertical">
 
                     <Button
@@ -100,7 +101,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="50dp"
                         android:backgroundTint="@color/red"
-                        android:text="Finish"
+                        android:text="@string/finish"
                         android:textColor="#FFFFFF"
                         android:visibility="gone" />
 
