--- a/android/app/src/main/res/layout/activity_rf_user_credentials.xml
+++ b/android/app/src/main/res/layout/activity_rf_user_credentials.xml
@@ -20,7 +20,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Looking For User Credentials" />
+            android:text="@string/looking_for_user_credentials" />
     </LinearLayout>
 
     <LinearLayout
@@ -37,7 +37,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Saving User Credentials" />
+            android:text="@string/saving_user_credentials" />
     </LinearLayout>
 
     <LinearLayout
@@ -56,7 +56,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
-            android:text="RF User Credentials"
+            android:text="@string/rf_user_credentials"
             android:textAlignment="center"
             android:textSize="24sp"
             android:textStyle="bold" />
@@ -70,7 +70,7 @@
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="User Name" />
+                android:hint="@string/user_name" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
@@ -82,7 +82,7 @@
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Password"
+                android:hint="@string/password"
                 android:inputType="textPassword" />
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -90,7 +90,7 @@
             android:id="@+id/save"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="save" />
+            android:text="@string/save" />
 
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
