--- a/android/app/src/main/res/layout/color_selector.xml
+++ b/android/app/src/main/res/layout/color_selector.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
@@ -9,64 +10,65 @@
     <ImageButton
         android:id="@+id/color"
         android:layout_width="0dp"
-        android:layout_height="25dp"
+        android:layout_height="48dp"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="15dp"
         android:layout_weight="1"
         android:background="@drawable/transparent"
 
+        android:contentDescription="@string/todo"
         android:scaleType="fitCenter"
         android:src="@drawable/colors"
-        android:text="Color"
+        android:text="@string/color"
         android:textAllCaps="false"
         android:textSize="11sp"
-        android:contentDescription="TODO" />
+        tools:ignore="DuplicateSpeakableTextCheck" />
 
 
     <ImageButton
         android:id="@+id/b_color_red"
-        android:layout_width="25dp"
-        android:layout_height="25dp"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
         android:layout_marginEnd="15dp"
         android:background="@drawable/color_ball"
         android:backgroundTint="#E91E63"
 
-        android:src="@drawable/ring"
-        android:contentDescription="TODO" />
+        android:contentDescription="@string/todo"
+        android:src="@drawable/ring" />
 
     <ImageButton
         android:id="@+id/b_color_blue"
-        android:layout_width="25dp"
-        android:layout_height="25dp"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
         android:layout_marginEnd="15dp"
         android:background="@drawable/color_ball"
         android:backgroundTint="#03A9F4"
-        android:contentDescription="TODO" />
+        android:contentDescription="@string/todo" />
 
     <ImageButton
         android:id="@+id/b_color_orange"
-        android:layout_width="25dp"
-        android:layout_height="25dp"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
         android:layout_marginEnd="15dp"
         android:background="@drawable/color_ball"
         android:backgroundTint="#FF5722"
-        android:contentDescription="TODO" />
+        android:contentDescription="@string/todo" />
 
     <ImageButton
         android:id="@+id/b_color_green"
-        android:layout_width="25dp"
-        android:layout_height="25dp"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
         android:layout_marginEnd="15dp"
         android:background="@drawable/color_ball"
         android:backgroundTint="#4CAF50"
-        android:contentDescription="TODO" />
+        android:contentDescription="@string/todo" />
 
     <ImageButton
         android:id="@+id/b_color_yellow"
-        android:layout_width="25dp"
-        android:layout_height="25dp"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
         android:layout_marginEnd="15dp"
         android:background="@drawable/color_ball"
         android:backgroundTint="#FFC107"
-        android:contentDescription="TODO" />
+        android:contentDescription="@string/todo" />
 </LinearLayout>
