--- a/android/app/src/main/res/layout/p_eraser_view.xml
+++ b/android/app/src/main/res/layout/p_eraser_view.xml
@@ -7,15 +7,15 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="30dp"
-        android:layout_gravity="right"
+        android:layout_gravity="end"
         android:background="@color/secon_bar"
         android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="30dp"
-            android:layout_gravity="right"
-            android:gravity="right"
+            android:layout_gravity="end"
+            android:gravity="end"
             android:orientation="horizontal">
 
             <TextView
@@ -23,7 +23,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_weight="1"
-                android:text="Size"
+                android:text="@string/size"
                 android:textColor="@android:color/background_light" />
 
             <SeekBar
@@ -42,7 +42,7 @@
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="5dp"
                 android:layout_weight="1"
-                android:text="00"
+                android:text="@string/_00"
                 android:textColor="@android:color/background_light" />
 
         </LinearLayout>
