--- a/android/app/src/main/res/layout/p_image_view.xml
+++ b/android/app/src/main/res/layout/p_image_view.xml
@@ -39,7 +39,7 @@
             android:id="@+id/linearLayout"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:layout_gravity="right"
+            android:layout_gravity="end"
             android:background="#E1E1E1"
             android:orientation="vertical"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -54,8 +54,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_gravity="right"
-                android:gravity="right|center_vertical"
+                android:layout_gravity="end"
+                android:gravity="end|center_vertical"
                 android:orientation="horizontal"
                 android:baselineAligned="false">
 
