--- a/android/app/src/main/res/layout/p_text_editor.xml
+++ b/android/app/src/main/res/layout/p_text_editor.xml
@@ -25,7 +25,7 @@
             android:id="@+id/linearLayout3"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:layout_gravity="right"
+            android:layout_gravity="end"
             android:background="#E1E1E1"
             android:orientation="vertical"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -42,7 +42,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="8dp"
                     android:layout_weight="1"
-                    android:text="00"
+                    android:text="@string/_00"
                     android:textColor="@android:color/background_dark"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toStartOf="@+id/b_cancel"
@@ -66,7 +66,7 @@
                     app:layout_constraintTop_toTopOf="parent"
                     app:tint="#E91E63"
                     tools:ignore="SpeakableTextPresentCheck"
-                    android:contentDescription="TODO" />
+                    android:contentDescription="@string/todo" />
 
                 <ImageButton
                     android:id="@+id/done"
@@ -78,7 +78,7 @@
                     android:layout_weight="1"
                     android:backgroundTint="#00FFFFFF"
                     android:src="@drawable/ic_baseline_done_24"
-                    android:text="Done"
+                    android:text="@string/done"
                     android:textAllCaps="false"
                     android:textColor="@android:color/background_light"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -86,7 +86,7 @@
                     app:layout_constraintTop_toTopOf="parent"
                     app:tint="#4CAF50"
                     tools:ignore="SpeakableTextPresentCheck"
-                    android:contentDescription="TODO" />
+                    android:contentDescription="@string/todo" />
 
                 <SeekBar
                     android:id="@+id/size"
