--- a/android/app/src/main/res/layout/color_selector.xml
+++ b/android/app/src/main/res/layout/color_selector.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="match_parent"
     android:orientation="horizontal"
     android:paddingTop="10dp"
@@ -9,8 +9,8 @@
 
     <ImageButton
         android:id="@+id/color"
-        android:layout_width="0dp"
-        android:layout_height="48dp"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="15dp"
         android:layout_weight="1"
@@ -27,8 +27,8 @@
 
     <ImageButton
         android:id="@+id/b_color_red"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
         android:layout_marginEnd="15dp"
         android:background="@drawable/color_ball"
         android:backgroundTint="#E91E63"
@@ -38,8 +38,8 @@
 
     <ImageButton
         android:id="@+id/b_color_blue"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
         android:layout_marginEnd="15dp"
         android:background="@drawable/color_ball"
         android:backgroundTint="#03A9F4"
@@ -47,8 +47,8 @@
 
     <ImageButton
         android:id="@+id/b_color_orange"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
         android:layout_marginEnd="15dp"
         android:background="@drawable/color_ball"
         android:backgroundTint="#FF5722"
@@ -56,8 +56,8 @@
 
     <ImageButton
         android:id="@+id/b_color_green"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
         android:layout_marginEnd="15dp"
         android:background="@drawable/color_ball"
         android:backgroundTint="#4CAF50"
@@ -65,8 +65,8 @@
 
     <ImageButton
         android:id="@+id/b_color_yellow"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
         android:layout_marginEnd="15dp"
         android:background="@drawable/color_ball"
         android:backgroundTint="#FFC107"
