--- a/android/app/src/main/res/layout/p_hightlight_view.xml
+++ b/android/app/src/main/res/layout/p_hightlight_view.xml
@@ -13,7 +13,7 @@
             android:id="@+id/linearLayout5"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:layout_gravity="right"
+            android:layout_gravity="end"
             android:background="#E1E1E1"
             android:orientation="vertical"
             android:visibility="visible"
