--- a/android/app/src/main/res/layout/pdf_editor.xml
+++ b/android/app/src/main/res/layout/pdf_editor.xml
@@ -51,11 +51,20 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#00FFFFFF"
-        android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/frameLayout">
+
+        <ImageButton
+            android:id="@+id/btnPrevPage"
+            android:layout_width="64dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            android:backgroundTint="#FFFFFF"
+            android:src="@drawable/ic_baseline_navigate_before_24"
+            android:visibility="gone" />
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/bottomNavigationView"
@@ -65,6 +74,7 @@
             android:layout_marginTop="4dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
+            android:layout_weight="1"
             android:background="@drawable/bottom_sheet_dialog_background"
             android:paddingTop="5sp"
             app:itemIconTint="@drawable/selector_bottom_nav"
@@ -75,8 +85,17 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:menu="@menu/ticket_info_nav_menu"
-            app:popupTheme="@style/popup"
-            />
+            app:popupTheme="@style/popup" />
+
+        <ImageButton
+            android:id="@+id/btnNextPage"
+            android:layout_width="64dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            android:backgroundTint="#FFFFFF"
+            android:src="@drawable/ic_baseline_navigate_next_24"
+            android:visibility="gone" />
 
     </LinearLayout>
 
