Editor All errors fixed

--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="btn1">#1976D2</color>
     <color name="lb">#10304E</color>
     <color name="white">#FFFFFF</color>
+    <color name="cccc">#A4FF5722</color>
 
     <color name="transperant">#00000000</color>
 
